# unifi-toolkit

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Caddyfile  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  reset_password.sh  run.py  setup.sh
.github/workflows/: docker-publish.yml
alembic/versions/: 20260202_0000_785d812e2ea3_add_threat_ignore_rules.py
app/: __init__.py  main.py
app/routers/: __init__.py  auth.py  config.py
app/static/css/: dashboard.css
app/templates/: dashboard.html  login.html
docs/: INSTALLATION.md  MIGRATION.md  QUICKSTART.md
shared/: __init__.py  config.py  unifi_client.py
shared/models/: unifi_config.py
tools/network_pulse/: scheduler.py
tools/threat_watch/: __init__.py  database.py  main.py  models.py  scheduler.py
tools/threat_watch/routers/: events.py  ignore_rules.py
tools/threat_watch/static/css/: styles.css
tools/threat_watch/static/js/: app.js
tools/threat_watch/templates/: index.html
tools/wifi_stalker/: __init__.py  main.py  scheduler.py
tools/wifi_stalker/routers/: devices.py
tools/wifi_stalker/static/css/: styles.css
tools/wifi_stalker/static/js/: app.js
tools/wifi_stalker/templates/: index.html
